<resources>
    <string name="app_name">Sample FPS Config Generator</string>

    <string name="menu_refresh_apps">Refresh</string>
    <string name="menu_send">Send to FPS</string>

    <string name="no_config_for_flow_type">This flow type has no stages configured</string>

    <string name="timeouts_title">System timeouts</string>
    <string name="flow_control_title">Flow control</string>
    <string name="seconds">seconds</string>
    <string name="settings_flow_response_timeout">Flow application response timeout</string>
    <string name="settings_flow_response_timeout_summary">Timeout while waiting for a response from a flow application in seconds.\nMin: 0 Max: 3600. Use 0 to set no timeout.</string>
    <string name="settings_payment_response_timeout">Payment application response timeout</string>
    <string name="settings_payment_response_timeout_summary">Timeout while waiting for a response from a payment application in seconds.\nMin: 0 Max: 3600. Use 0 to set no timeout.</string>
    <string name="settings_split_timeout">Split timeout</string>
    <string name="settings_split_timeout_summary">Timeout while waiting for a response from the split application in seconds.\nMin: 0 Max: 3600. Use 0 to set no timeout.</string>
    <string name="settings_status_update_timeout">Status update timeout</string>
    <string name="settings_status_update_timeout_summary">Timeout while waiting for a response from an application during a status update in seconds.\nMin: 0 Max: 3600. Use 0 to set no timeout.</string>
    <string name="settings_select_timeout">Select timeout</string>
    <string name="settings_select_timeout_summary">Timeout while waiting for a response from the user to select an application or device in seconds.\nMin: 0 Max: 3600. Use 0 to set no timeout.</string>
    <string name="settings_abort_flow_app">Abort on flow app error</string>
    <string name="settings_abort_flow_app_summary">If set, this will abort (CANCEL) a payment if any flow application in the flow fails with an error.</string>
    <string name="settings_abort_payment_app">Abort on payment app error</string>
    <string name="settings_abort_payment_app_summary">If set, this ensures that the flow will be aborted (CANCELLED) if an error occurs during a call to ANY payment application. If disabled the flow will keep attempting to take payment until manually cancelled.</string>
    <string name="settings_allow_status_bar">Allow status bar access</string>
    <string name="settings_allow_status_bar_summary">If set, this will allow access to FPS from the status bar.</string>
    <string name="settings_enable_legacy_pa_support">Legacy payment app support</string>
    <string name="settings_enable_legacy_pa_support_summary">If set, this will enable support for legacy payment apps (AEVI Public SDK - Simple Payment API v2).</string>
    <string name="settings_use_websocket">Use websocket IPC</string>
    <string name="settings_use_websocket_summary">If set, all AppFlow IPC will be performed over websockets instead of the default Android Messenger</string>
    <string name="menu_flow_configuration">Flow configuration</string>
    <string name="menu_settings">Settings</string>
    <string name="openDrawer">Open navigation</string>
    <string name="closeDrawer">Close navigation</string>
    <string name="auto_generate_configs">AUTO</string>
    <string name="experimental_features_title">Experimental features</string>
    <string name="warning_experimental">Warning: The features below are currently in development and not guaranteed to work. Use with caution.</string>
    <string name="general_title">General</string>
    <string name="comms_title">App communications</string>
    <string name="menu_fps_settings">FPS Settings</string>
    <string name="menu_appflow_settings">AppFlow Settings</string>
    <string name="appflow_settings">AppFlow Settings</string>
    <string name="fps_settings">FPS Settings</string>
    <string name="invalid_date_format">Invalid date format</string>
    <string name="invalid_time_format">Invalid time format</string>
    <string name="invalid_lang_code">Invalid ISO-639-1 language code</string>
    <string name="invalid_currency_code">Invalid ISO-4217 currency code</string>
    <string name="date_format_summary">Date format to use for displaying dates within AppFlow</string>
    <string name="date_format_title">Date format</string>
    <string name="time_format_summary">Time format to use for displaying time within AppFlow</string>
    <string name="time_format_title">Time format</string>
    <string name="primary_language_summary">Primary language two-letter ISO-639-1 code</string>
    <string name="primary_language_title">Primary language</string>
    <string name="primary_currency_summary">Primary currency three-letter ISO-4217 code</string>
    <string name="primary_currency_title">Primary currency</string>
    <string name="settings_filter_flow_services_by_type_summary">If set, FPS will filter flow services based on what flow types they report they support for the given flow.</string>
    <string name="settings_filter_flow_services_by_type">Filter flow services</string>
    <string name="settings_multi_device">Multi-device support</string>
    <string name="settings_multi_device_summary">If set, FPS will allow external devices to connect and be used for application execution as part of a flow. This feature is currently not available.</string>
    <string name="settings_always_call_preflow_summary">If set, FPS will always execute the PRE_FLOW stage, as opposed to only executing it for zero-based payment requests.</string>
    <string name="settings_always_call_preflow">Always call PRE_FLOW</string>
    <string name="feature_toggles_title">Feature configuration</string>
    <string name="settings_database_row_limit_summary">The maximum number of request history database rows allowed in FPS.</string>
    <string name="settings_database_row_limit">Request history row limit</string>
    <string name="settings_currency_conversion_summary">If set, flow services are allowed to change the currency of a flow (dynamic currency conversion). This feature is currently not available.</string>
    <string name="settings_currency_conversion">Dynamic currency conversion</string>
    <string name="rows">rows</string>
    <string name="read_only_note">Note! This is a read-only view of the settings as configured by an AppFlow Configuration Provider on the device.</string>
    <string name="flow_configuration">Flow Configuration</string>
    <string name="settings_show_flows_no_apps_title">Show flows with no apps</string>
    <string name="settings_show_flows_no_apps">If set, flows will always be shown regardless of whether there are any apps supporting that flow or not. </string>
    <string name="settings_show_stages_no_apps_title">Show stages with no apps</string>
    <string name="settings_show_stages_no_apps">If set, stages will always be shown regardless of whether there are any apps supporting that stage or not. </string>
    <string name="preferences">Preferences</string>
    <string name="settings_auto_manage_apps">If set, applications will automatically be added to all flows and stages that they support. Disable for manual flow configuration.</string>
    <string name="settings_auto_manage_apps_title">Auto manage flows</string>
    <string name="is_read_only">This is a read-only view of the configuration provided by the \'AppFlow Configuration Provider\'.</string>
    <string name="auto_is_on">The flows are currently managed automatically, meaning that any AppFlow compliant applications are automatically added to the flows and stages they report as supported.\n\nClick below to switch to manual configuration, which will disable the automatic management of flows. Alternatively you can view the flows in read only mode. Auto/manual can be changed later via preferences (top right corner).</string>
    <string name="enable_manual_configuration">Configure manually</string>
    <string name="settings_app_cancellation_title">Delegate cancellations to</string>
    <string name="settings_app_cancellations">If set, FPS will delegate cancellation requests to this flow service rather than handling them internally.</string>
    <string name="settings_mandatory_app_title">Mandatory</string>
    <string name="settings_mandatory_app">If set, this flow will be rejected by FPS if this application is not installed on the device.</string>
    <string name="settings_conditional_on_title">Conditional On</string>
    <string name="settings_conditional_on">Provide a condition that needs to be met for the application to be called at this flow stage. An example is \'outcomePartiallyFulfilled\'.</string>
    <string name="finish">Finish</string>
    <string name="view_read_only">View read only</string>
    <string name="enable_all_stages">Enable this app for ALL stages</string>
    <string name="disable_all_stages">Disable this app for ALL stages</string>

</resources>
