<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/card_view_width"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_vertical"
                android:layout_marginRight="@dimen/margin_horizontal"
                android:layout_marginBottom="@dimen/margin_vertical"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/read_only_note"
                    style="@style/ConfigGeneralText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    android:text="@string/read_only_note"
                    android:visibility="gone"/>

                <TextView
                    style="@style/ConfigSectionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/section_title_bottom_margin"
                    android:text="@string/general_title"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingSwitch
                    android:id="@+id/allow_status_bar_access"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:switchDefaultValue="true"
                    app:switchSummary="@string/settings_allow_status_bar_summary"
                    app:switchTitle="@string/settings_allow_status_bar"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingIntegerInput
                    android:id="@+id/database_row_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:editSuffix="@string/rows"
                    app:editSummary="@string/settings_database_row_limit_summary"
                    app:editTitle="@string/settings_database_row_limit"/>

                <TextView
                    style="@style/ConfigSectionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/section_title_bottom_margin"
                    android:text="@string/timeouts_title"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingIntegerInput
                    android:id="@+id/flow_response_timeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:editSuffix="@string/seconds"
                    app:editSummary="@string/settings_flow_response_timeout_summary"
                    app:editTitle="@string/settings_flow_response_timeout"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingIntegerInput
                    android:id="@+id/payment_response_timeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:editSuffix="@string/seconds"
                    app:editSummary="@string/settings_payment_response_timeout_summary"
                    app:editTitle="@string/settings_payment_response_timeout"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingIntegerInput
                    android:id="@+id/split_timeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:editSuffix="@string/seconds"
                    app:editSummary="@string/settings_split_timeout_summary"
                    app:editTitle="@string/settings_split_timeout"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingIntegerInput
                    android:id="@+id/status_update_timeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:editSuffix="@string/seconds"
                    app:editSummary="@string/settings_status_update_timeout_summary"
                    app:editTitle="@string/settings_status_update_timeout"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingIntegerInput
                    android:id="@+id/select_timeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:editSuffix="@string/seconds"
                    app:editSummary="@string/settings_select_timeout_summary"
                    app:editTitle="@string/settings_select_timeout"/>

                <TextView
                    style="@style/ConfigSectionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/section_title_bottom_margin"
                    android:text="@string/flow_control_title"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingSwitch
                    android:id="@+id/abort_on_flow_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:switchDefaultValue="false"
                    app:switchSummary="@string/settings_abort_flow_app_summary"
                    app:switchTitle="@string/settings_abort_flow_app"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingSwitch
                    android:id="@+id/abort_on_payment_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:switchDefaultValue="false"
                    app:switchSummary="@string/settings_abort_payment_app_summary"
                    app:switchTitle="@string/settings_abort_payment_app"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingSwitch
                    android:id="@+id/filter_flow_services_by_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:switchDefaultValue="false"
                    app:switchSummary="@string/settings_filter_flow_services_by_type_summary"
                    app:switchTitle="@string/settings_filter_flow_services_by_type"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingSwitch
                    android:id="@+id/always_call_preflow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:switchDefaultValue="false"
                    app:switchSummary="@string/settings_always_call_preflow_summary"
                    app:switchTitle="@string/settings_always_call_preflow"/>

                <TextView
                    style="@style/ConfigSectionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/section_title_bottom_margin"
                    android:text="@string/feature_toggles_title"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingSwitch
                    android:id="@+id/enable_legacy_pa_support"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:switchDefaultValue="false"
                    app:switchSummary="@string/settings_enable_legacy_pa_support_summary"
                    app:switchTitle="@string/settings_enable_legacy_pa_support"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingSwitch
                    android:id="@+id/multi_device_support"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:switchDefaultValue="false"
                    app:switchSummary="@string/settings_multi_device_summary"
                    app:switchTitle="@string/settings_multi_device"/>

                <com.aevi.sdk.pos.flow.config.ui.view.ConfigSettingSwitch
                    android:id="@+id/currency_conversion_support"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_vertical"
                    app:switchDefaultValue="false"
                    app:switchSummary="@string/settings_currency_conversion_summary"
                    app:switchTitle="@string/settings_currency_conversion"/>

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</RelativeLayout>